fix: social icons alignment on mobile screen

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1531,9 +1531,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1618,6 +1618,11 @@ body {
         -ms-flex: 1 1 auto;
             flex: 1 1 auto;
     margin: 14px 0 0 14px;
+  }
+  .team .social {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
 
